# reinforcement_learning

./: .dockerignore  .gitignore  .pre-commit-check-cuda.py  .python-version  =0.40.0  ADAPTIVE_ENFORCEMENT_FLOOR_EXPLANATION.md  ADAPTIVE_LEARNING_ANALYSIS.md  ADAPTIVE_LEARNING_FIXES.md  ADAPTIVE_LEARNING_ISSUE_ANALYSIS.md  ADAPTIVE_LEARNING_NO_TRADES_FIX.md  ALL_BUGS_SUMMARY.md  ALL_FIXES_COMPLETE.md  ALL_ISSUES_FOUND_AND_STATUS.md  ATR_TAKE_PROFIT_RECOMMENDATION.md  BALANCED_QUALITY_FILTERS.md  BOTH_ISSUES_FIXED.md  BUILD_AND_DEPLOY.md  CHECKPOINTS_ARCHIVED.md  CLEAR_TRAINING_DATA_FIX.md  CLEAR_TRAINING_DATA_FIX_VERIFIED.md  COMMISSION_DOUBLE_CHARGING_FIX.md  COMMISSION_ISSUE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_COMPLETE.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_BUG_ANALYSIS.md  COMPREHENSIVE_FIXES_APPLIED.md  COMPREHENSIVE_FIX_PLAN.md  CONFIG_CHANGES_APPLIED.md  CONFIG_COMPARISON_GITHUB_REPO.md  CRITICAL_BUGS_FOUND.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_ISSUE_ALL_LOSING_TRADES.md  CRITICAL_PNL_DISCREPANCY_FOUND.md  CRITICAL_ROOT_CAUSE_ANALYSIS.md  CUDA_PROTECTION.md  DATA_EXTRACTION_BUG_FIX.md  DATA_FILES_RESTORED.md  DECISIONGATE_HISTORY_AND_CURRENT_STATUS.md  DECISIONGATE_RE_ENABLE_RECOMMENDATION.md  DOCKER_SETUP.md  (+167 more)
configs/: swarm_config_example.yaml  train_config.yaml  train_config_adaptive.yaml  train_config_adaptive.yaml.backup  train_config_full.yaml  train_config_gpu.yaml  train_config_gpu_optimized.yaml
docs/: 404_CHECKPOINT_ERROR_FIX.md  A2A_PROTOCOL_ANALYSIS.md  ADAPTIVE_LEARNING_AGENT_INTEGRATION.md  ADAPTIVE_LEARNING_ANALYSIS_AND_RECOMMENDATIONS.md  ADAPTIVE_LEARNING_FIXES_IMPLEMENTED.md  ADAPTIVE_LEARNING_IMPLEMENTATION_SUMMARY.md  ADAPTIVE_LEARNING_IMPROVEMENTS.md  ADAPTIVE_LEARNING_INTEGRATION_COMPLETE.md  ADAPTIVE_LEARNING_SUMMARY_AND_NEXT_STEPS.md  ADAPTIVE_PROFITABILITY_INTEGRATION.md  ADAPTIVE_PROFITABILITY_SUMMARY.md  ADAPTIVE_STOP_LOSS_IMPLEMENTATION.md  ADAPTIVE_TRAINING_SYSTEM.md  ADDING_INDICATORS_QUICK_REF.md  AGENTIC_SWARM_PLAN.md  ALGO_TRADER_OPTIMIZATION_ROADMAP.md  ALL_FIXES_APPLIED.md  ARCHITECTURE_MISMATCH_RESOLUTION.md  AUTOMATIC_OPTIMIZATION_CONFIRMED.md  AUTO_RETRAIN_AND_DRIFT_DETECTION.md  AUTO_RETRAIN_QUICKSTART.md  AUTO_RETRAIN_SUMMARY.md  AUTO_RETRAIN_TROUBLESHOOTING.md  BOUNDARY_CHECK_FIX.md  BRIDGE_SERVER_EXPLAINED.md  CHECKPOINT_RECOMMENDATION.md  CHECK_PRIORITY1_MESSAGES.md  CONFIDENCE_LOGGING_FIX.md  CONFIG_OPTIMIZATION_EPISODE_464.md  CONFIG_RELOAD_CHECK.md  CONTINUOUS_LEARNING_GUIDE.md  CRITICAL_FINDING_DECISIONGATE_NOT_IN_TRAINING.md  CRITICAL_FINDING_EARLY_SATURATION.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_SELF_HEALING_INTEGRATIONS.md  CURL_COMMANDS.md  CURRENT_METRICS_REVIEW.md  CURRENT_STATUS_ANALYSIS.md  CURRENT_TRAINING_STATUS.md  (+179 more)
docs/plans/: RL.md  position_management.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
kong/: COST_TRACKING.md  FASTAPI_HEALTH_ENDPOINT.md  KEY_ROTATION.md  MONITORING_API.md  PHASE4_SETUP_NOTES.md  PORT_CONFIGURATION.md  README.md  TRAFFIC_MANAGEMENT.md  alerts.json  deploy_kong.ps1  docker-compose-prometheus.yml  docker-compose.yml  generate_keys.py  grafana-dashboard.json  kong.yml  prometheus.yml  rotate_keys.sh  setup_kong.sh  setup_phase2.sh  setup_phase3.sh  setup_phase4.sh  setup_phase4_fixed.sh  setup_phase4_manual.sh  setup_phase6.sh  setup_phase7.sh  test_phase2.sh  test_phase3.sh  test_phase4.sh  test_phase5_e2e.sh
nt8_strategy/: RLSignalIndicator.cs  RLTradingStrategy.cs
reports/: forecast_performance_analysis.json  losing_trades_analysis.json  markov_regime_report.json
scripts/: analyze_checkpoint_performance.py  analyze_losing_trades.py  analyze_monitoring_data.py  analyze_performance_degradation.py  analyze_state_dimension_mismatch.py  benchmark_swarm.py  check_checkpoint_compatibility.py  check_training_metrics.py  check_training_progress.py  diagnose_losing_streak.py  get_checkpoint_performance.py  monitor_journal_updates.py  run_markov_regime_analysis.py  test_forecast_performance.py  test_monitoring_filter.py  verify_performance_endpoint.py
src/: adaptive_trainer.py  ai_analysis_service.py  analyze_model.py  api_server.py  auto_retrain_monitor.py  automated_learning.py  backtest.py  capability_registry.py  check_training_status.py  clear_training_data.py  continuous_learning.py  data_extraction.py  decision_gate.py  drift_monitor.py  execution_quality.py  journal_integration.py  kong_client.py  latency_model.py  live_trading.py  llm_providers.py  market_impact.py  model_evaluation.py  model_versioning.py  models.py  monitoring.py  monte_carlo_risk.py  nt8_bridge_server.py  order_book_simulator.py  order_manager.py  partial_fill_model.py  performance_attribution.py  portfolio_manager.py  quality_scorer.py  query_deepseek.py  reasoning_engine.py  regime_detector.py  regime_strategy_manager.py  risk_manager.py  rl_agent.py  scenario_simulator.py  (+13 more)
src/agentic_swarm/: __init__.py  base_agent.py  config_loader.py  cost_tracker.py  shared_context.py  swarm_orchestrator.py  verify_setup.py
src/analysis/: __init__.py  elliott_wave.py  markov_regime.py
src/data_sources/: __init__.py  cache.py  market_data.py  sentiment_sources.py
tests/: E2E_TEST_RESULTS.md  run_all_tests.py  test_anthropic_integration.py  test_decision_gate_integration.py  test_elliott_wave_agent.py  test_forecast_features.py  test_kong_integration_e2e.py  test_kong_phase6_e2e.py  test_kong_phase7_e2e.py  test_markov_regime.py  test_monte_carlo_e2e.py  test_ollama_integration.py  test_regime_features.py  test_scenario_rl_integration.py  test_scenario_simulation_e2e.py  test_stop_loss.py  test_swarm_agents.py  test_swarm_orchestrator.py  test_swarm_performance.py  test_time_filter.py  test_training_e2e.py  test_volatility_e2e.py
(+33 files in other folders)
